--- a/Les_transparent/corps/fichier.tex
+++ b/Les_transparent/corps/fichier.tex
@@ -8,7 +8,7 @@
 \begin{frame}
   \frametitle{Principe}
   \begin{itemize}
-  \item Mécanisme de gestion des erreurs en Java\pause
+  \item Mécanisme de gestion des erreurs en Python\pause
   \item Détournement du fonctionnement du programme
   \item[$\Rightarrow$] Bloc de traitement de l'erreur\pause
   \item Nombreuses méthodes de l'API Java utilisent des exceptions
