--- a/Les_transparent/Python7_TAD.tex
+++ b/Les_transparent/Python7_TAD.tex
@@ -2,7 +2,7 @@
 
 \documentclass{transp_java}
 
-\title[Langage et algorithmique]{Langage et algorithmique \\ \textcolor[rgb]{0.5,0,0.5}{- Fichiers et exception}}
+\title[Langage et algorithmique]{Langage et algorithmique \\ \textcolor[rgb]{0.5,0,0.5}{- Type Abstrait de Données (TAD) -}}
 \author{A. Malek TOUMI\\ toumiab@ensta-bretagne.fr}
 %\date[05/04/2015]{Toumi A. Malek.  Python 3.4}
 \date{2015/2016}
@@ -47,10 +47,8 @@
 \newlength\dunder
 \settowidth{\dunder}{\_}
 \newcommand{\twound}{\rule{2\dunder}{0.4pt}}
-
-
 %%%
-\input{fichier}
+\input{tad}
 
 \end{document}
 
