--- a/Les_transparent/corps/tad.tex
+++ b/Les_transparent/corps/tad.tex
@@ -9,7 +9,7 @@
 
   \begin{defi}[Type abstrait de données]
     Concept d'utilisation de données ne tenant pas en compte leur
-    réprésentation interne.
+    représentation interne.
   \end{defi}
 
   \pause
@@ -42,6 +42,9 @@
   \end{itemize}
 \end{frame}
 
+% #######################
+
+
 \begin{frame}
   \frametitle{Exemple : rationnels}
 
@@ -49,75 +52,124 @@
   \item \only<1>{Définition d'un nouveau \textcolor{red}{type}}
 \only<2>{Représentation \textcolor{red}{interne}}
 \only<3-5>{\textcolor{red}{Initialisation} de la représentation interne}
-\only<6>{Opérations}
-  \item \only<1>{Classe}
-\only<2>{Variables d'instance}
-\only<3-5>{Constructeur}
-\only<6>{Méthodes}
+\only<6-8>{Opérations}
   \end{itemize}
+	
+
+	
+\begin{itemize}
+	
+\item \only<1>{Classe}
+\only<2-5>{Constructeur}\only<3-5>{ et Variables d'instance}
+\only<6-8>{Méthodes d'instance : \textcolor<6>{red}{égalité}, \textcolor<7>{red}{multiplication}, \textcolor<8>{red}{représentation} }
+ \end{itemize}
 
   \begin{semiverbatim}
-    {\color<1>{red}public class Rationnel} \{
-\only<2>{
+    \color<1>{red}class Rationnel (object):
+\only<2-5>{
 
-  \hspace{1cm}\textcolor{red}{private} int numerateur;
+  \hspace{1cm}def \textcolor{red}{\twound{init}\twound}(\textcolor{blue}{self}, num, den = 1):
+	}
 
-    \hspace{1cm}\textcolor{red}{private} int denominateur;}
+\only<3>{	
+				\hspace{2cm}self.\_\_num = num
 
-    \hspace{1cm}...
-\only<3>{
+        \hspace{2cm}self.\_\_den = den
+      }
+\only<4-5>{
+  %\hspace{1cm}def \textcolor{red}{\twound{init}\twound}(self, num, den =1) :
+    \hspace{2cm}if (den == 0):
 
-  \hspace{1cm}public \textcolor{red}{Rationnel}(int num, int den) \{
+        \hspace{3cm}self.\_\_num = 0
 
-    \hspace{2cm}if (den == 0) \{
+        \hspace{3cm}self.\_\_den = 0
 
-        \hspace{3cm}numerateur = 0;
+    \hspace{2cm}elif den < 0:
 
-        \hspace{3cm}denominateur = 0;
+        \hspace{3cm}self.\_\_num = - num
 
-      \hspace{2cm}\}}
-\only<4>{
-
-    \hspace{2cm}else if(den > 0) \{
-
-        \hspace{3cm}numerateur = num;
-
-        \hspace{3cm}denominateur = den;
-
-      \hspace{2cm}\}}
+        \hspace{3cm}self.\_\_den = - den
+      }
 \only<5>{
 
-    \hspace{2cm}else \{
+    \hspace{2cm}else :
 
-        \hspace{3cm}numerateur = -num;
+        \hspace{3cm}self.\_\_num = num
 
-        \hspace{3cm}denominateur = -den;
+        \hspace{3cm}self.\_\_den = den
+}
+\only<6-7>{
 
-      \hspace{2cm}\}
+  \hspace{1cm}def \textcolor<6>{red}{\_\_eq\_\_}(\textcolor{blue}{self}, other):
 
-  \hspace{1cm}\}}
-\only<6>{
+    \hspace{2cm}return self.\_\_num * other.\_\_den == self.\_\_den 
+		
+		\hspace{2cm}* other.\_\_num
+}
+\only<7-8>{
+	
+	\hspace{1cm}def \textcolor<7>{red}{\_\_mult\_\_}(\textcolor{blue}{self}, other):
 
-  \hspace{1cm}public void \textcolor{red}{mult}(Rationnel r) \{
+    \hspace{2cm}n = self.\_\_num * other.\_\_num
+		
+    \hspace{2cm}d = self.\_\_den * other.\_\_den
+		
+		\hspace{2cm}return Rationnel(n, d)
+}
+\only<8>{	
 
-    \hspace{2cm}numerateur *= r.numerateur;
+\hspace{1cm}def \textcolor<8>{red}{\_\_str\_\_}(\textcolor{blue}{self}):
 
-    \hspace{2cm}denominateur *= r.denominateur;
-
-  \hspace{1cm}\}
-
-  \}}
+    \hspace{2cm}return '\{0\}/\{1\}'.format(self.\_\_num, self.\_\_den)
+}
   \end{semiverbatim}
-\vspace{5cm}
 \end{frame}
+%################
+
+
+
 
 \begin{frame}
   \frametitle{Exemple : rationnels}
-  \includegraphics[height=6cm]{rationnel}
-
+	\only<1-4>{
+	\begin{exemple}
+		\begin{semiverbatim}
+		 \textcolor{green}{\# Test : création de rationnels}
+		
+     r1 = Rationnel(1, -2)
+		
+     r2 = Rationnel(3, 5)
+		
+     \textcolor{green}{\# Affichage des rationnels}
+		
+     print(r1, r2, r1*r2, r1+r2) \pause 
+		 
+	  \textcolor{green}{	 \# => -1/2 3/5 -3/10 1/10}
+		
+     \pause\textcolor{green}{\# Test d'égalité de rationnels}
+		
+     print(r1 == Rationnel(-2, 4)) \pause\textcolor{green}{\# => True}
+		\end{semiverbatim}
+	\end{exemple}
+	}
+	\only<5>{
+ \hspace{3cm}  \includegraphics[height=6cm]{images/rationnel.png}
+}
 \end{frame}
 
+\begin{frame}
+  \frametitle{Définition}
+	\begin{remarques}[Quelques remarques importantes ]
 
+    
+		\begin{itemize}
+			\item Tous les attributs et méthodes des classes Python sont \texttt{publics}  au sens de java et C++, 
+			\item Le constructeur d'une classe est une méthode spéciale qui s'appelle \texttt{blue}{$\_\_init\_\_()$}.
+			\item Les attributs (variables d'instance) sont créés  et initialisés dans le constructeur 
+			\item Toutes les méthodes d'instance prennent une variable \textcolor{blue}{self} comme premier argument. Cette variable est une référence à l'objet manipulé.
+\end{itemize}
+\end{remarques}
+\end{frame}
 
 \section{Notion d'objet}
 
@@ -153,16 +205,17 @@
   \frametitle{Notion de classe et d'instance}
   \begin{itemize}
   \item Classe $\simeq$ type
-  \item Instancier la classe $\simeq$ déclarer une variable de ce type
-  \item Objet : variable dont le type est une classe
+  \item Instancier la classe $\simeq$ créer une variable de ce type
+  \item Objet ou instance : variable créée dont le type est une classe
   \end{itemize}
   \pause
   Classe $\leadsto$ plan
 
   Instance $\leadsto$ réalisation
   \pause
+	\\
   \begin{alertblock}{Important}
-    Un programme est composé d'instances et non de classes
+    Un programme est composé d'instances (objets) et non de classes
   \end{alertblock}
 \end{frame}
 
@@ -173,7 +226,7 @@
     \begin{itemize}
     \item<1-> Classe Rationnel
     \item<3-> Création d'instances / objets
-    \item<6-> Utilisation d'objets
+    \item<6-> Utilisation d'objets : exemple x = x*y
     \end{itemize}}
   % \only<2>{
   %   \includegraphics[height=7cm]{classe_objet1}
@@ -201,23 +254,27 @@
         \uncover<3->{
           \node (figure) [classe, node distance=4mm,below=of classe]
           {
-            \texttt{\textcolor<7>{blue}{num=2\\den=3}}
-            \nodepart{second}\texttt{\textcolor<7>{red}{mult()}\\equals()}
+            \texttt{\textcolor<7>{blue}{\_\_num=2\\\_\_den=3}}
+            \nodepart{second}\texttt{\textcolor<7>{red}{\_\_mult\_\_()}\\\_\_eq\_\_()}
           };
           \node (obj1) [below=of figure, xshift=-1cm] {\textcolor<7>{red}{x}};
           \only<-5>{\draw[uses] (obj1) to (figure.south);}
           \only<7>{\draw[uses,color=red] (obj1) to (figure.south);}
         }
-        \node (main) [node distance=1mm,below=of obj1,xshift=1cm] {\texttt{main()}};
+        \node (main) [node distance=1mm,below=of obj1,xshift=1cm] {\texttt{x = Rationnel(2,3)}};
+				
         \uncover<5->{
           \node (figure2) [classe, right=of figure]
           {
-            \texttt{num=1\\den=5}
-            \nodepart{second}\texttt{mult()\\equals()}
+            \texttt{\_\_num=1\\\_\_den=5}
+            \nodepart{second}\texttt{\_\_mult\_\_()\\\_\_eq\_\_()}
           };
+					\node (main) [node distance=1mm,below=of obj1,yshift=-0.5cm,xshift=1cm] {\texttt{y = Rationnel(1,5)}};
           \node (obj2) [below=of figure2, xshift=-1cm] {y};
           \draw[uses] (obj2) to (figure2.south);
+				  	
         }
+				
 
         \begin{pgfonlayer}{background}
           % Compute a few helper coordinates
@@ -231,48 +288,45 @@
   }
 \end{frame}
 
-\subsection{POO en Java}
+\subsection{POO en Python}
 
 \begin{frame}
-  \frametitle{Notion de classe et d'objet en Java}
+  \frametitle{Notion de classe et d'objet en Python}
   \begin{itemize}
-  \item Une classe définie dans un fichier \emph{.java}
-  \item Nom de la classe dans le fichier après le \emph{public class}
+  \item plusieurs classes peuvent être définies dans un seul fichier (module) \emph{.py}
+  \item Nom de la classe dans le fichier après le \emph{class}
   \item Usage : faire commencer le nom de la classe par une majuscule
   \end{itemize}
   \pause
-  \begin{remarques}
-    \begin{itemize}
-    \item En Java, une seule classe \textcolor{red}{publique} par
-      fichier\pause
-    \item En général, les classes sont publiques\pause
-    \item[$\Rightarrow$] une seule classe par fichier
-    \end{itemize}
-  \end{remarques}
+  %\begin{remarques}
+    %\begin{itemize}
+    %\item En Java, une seule classe \textcolor{red}{publique} par
+      %fichier\pause
+    %\item En général, les classes sont publiques\pause
+    %\item[$\Rightarrow$] une seule classe par fichier
+    %\end{itemize}
+  %\end{remarques}
 \end{frame}
 
 \begin{frame}
   \frametitle{Instanciation de classes}
-  \only<1,2,4,6>{
+  \only<1,2,4>{
     \begin{itemize}
     \item Utiliser une classe $\Rightarrow$ créer une instance
     \item Instance = variable $\Rightarrow$ se manipule comme une variable
       \begin{itemize}
-      \item<2-> déclaration
-      \item<4-> initialisation
-      \item<6-> utilisation
+      \item<2-> création et initialisation
+      \item<4-> utilisation
       \end{itemize}
     \end{itemize}
     \begin{exemple}
       \begin{semiverbatim}
-        \uncover<2->{Rationnel x;}
-        
-        \uncover<4->{x = new Rationnel(2,3);}
-
-        \uncover<6->{x.mult(x);}
+        \uncover<2->{x = Rationnel(2,3)}
+     
+				\uncover<4->{x = x * x \textcolor{green}{\# x = x.\_\_mul\_\_(x)}}
       \end{semiverbatim}
     \end{exemple}}
-  \only<3,5,7>{
+  \only<3,5>{
     \begin{center}
       \tikzstyle{classe}=[rectangle, draw=black, rounded corners,
       fill=blue!20, drop shadow, text centered, text=black, text width=2cm,
@@ -284,19 +338,19 @@
       \begin{tikzpicture}[node distance=1cm]
         \node (classe) {\textbf{Classe Rationnel}};
         
-        \uncover<5->{
+        \uncover<3->{
           \node (figure) [classe, node distance=4mm,below=of classe]
           {
-            \texttt{num=2\\den=3}
-            \nodepart{second}\texttt{\textcolor<7>{red}{mult()}\\equals()}
+            \texttt{\_\_num=2\\\_\_den=3}
+            \nodepart{second}\texttt{\textcolor<5>{red}{\_\_mult\_\_()}\\\_\_eq\_\_()}
           };
         }
-          \node (obj1) [below=of figure, xshift=-1cm] {\textcolor<7>{red}{x}};
-        \uncover<5->{
-          \only<-5>{\draw[uses] (obj1) to (figure.south);}
-          \only<7>{\draw[uses,color=red] (obj1) to (figure.south);}
+          \node (obj1) [below=of figure, xshift=-1cm] {\textcolor<5>{red}{x}};
+        \uncover<3->{
+          \only<-3>{\draw[uses] (obj1) to (figure.south);}
+          \only<5>{\draw[uses,color=red] (obj1) to (figure.south);}
         }
-        \node (main) [node distance=1mm,below=of obj1,xshift=1cm] {\texttt{main()}};
+       % \node (main) [node distance=1mm,below=of obj1,xshift=1cm] {\texttt{main()}};
 
         \begin{pgfonlayer}{background}
           % Compute a few helper coordinates
@@ -322,63 +376,104 @@
 \begin{frame}
   \frametitle{Variables d'instance}
   \begin{itemize}
-  \item Attributs de la classe
-  \item En général masqués à l'extérieur de la classe : \textcolor{red}{private}
-  \item Règle de nommage : nom commence par une minuscule
-  \end{itemize}
-  \pause
+	\item <1-> Attributs de la classe : créées et initialisées dans le constructeur et attachées à la variable \textcolor[rgb]{0,0,1}{self}\\
+  \item <2-> En général, pas accessibles directement  et renommées en interne   $\Longrightarrow \_\_$\texttt{attribut}\\
+	\item<3> Règle de nommage : nom commence par une minuscule
+	\end{itemize}
+  \only<1-3>{
   \begin{exemple}[Rationnels]
-    deux variables entières :
-    \begin{semiverbatim}
-      public class Rationnel \{
+  \begin{semiverbatim}
+	class Rationnel (object):
+   
+	\hspace{1cm}def \textcolor<1>{red}{\twound{init}\twound}(\textcolor{blue}{self}, num, den = 1):
+	      
+				\hspace{2cm}\textcolor{green}{\# deux variables d'instance}
+				
+				\hspace{2cm}\textcolor<1>{red}{self.}\textcolor<2>{red}{\_\_}\textcolor<3>{red}{num} = num
 
-      \hspace{1cm}private int numerateur;
-
-      \hspace{1cm}private int denominateur;
-
-      \hspace{1cm}...
-
-      \}
+        \hspace{2cm}\textcolor<1>{red}{self.}\textcolor<2>{red}{\_\_}\textcolor<3>{red}{den} = den
+      
     \end{semiverbatim}
   \end{exemple}
+	}
 \end{frame}
 
 \begin{frame}
-  \frametitle{Modificateurs d'accès}
-  Quatre modificateurs d'accès possibles :
-  \begin{itemize}[<+->]
-  \item public : utilisable depuis toutes les classes
-  \item private : utilisable uniquement dans sa classe
-  \item protected : utilisable depuis la classe et les sous-classes
-  \item default (rien) : utilisable dans le paquetage courant
-  \end{itemize}
+  \frametitle{Visibilité des attributs }
+  \begin{remarque}
+	Tous les attributs et méthodes des classes Python sont \texttt{publics} au sens de java et C++, 
+		\end{remarque}
+ Par convention :
+		
+		\begin{itemize}
+		  \item Une variable dont le nom commence par $(\_) \Longrightarrow$ est considérée comme \emph{protect}
+			\item Une variable dont le nom commence par $(\_\_) \Longrightarrow$ est considérée \emph{private} et renommée en interne
+			\item Autrement $\Longrightarrow$ variable \emph{public}
+		\end{itemize}
 \end{frame}
 
+\begin{frame}
+  \frametitle{Visibilité des attributs }
+  \begin{exemple}
+	  \begin{semiverbatim}
+		\vspace{-.5cm}
+		class Personne(object):
+		        
+		\hspace{0.5cm}def \_\_init\_\_(self):
+		
+		    \hspace{1.5cm}self.nom = "inconnu" \textcolor[rgb]{0,0.58,0}{\# Variable publique}
+				
+        \hspace{1.5cm}self.\textcolor[rgb]{1,0,0}{\_}prenom = "xxx" \textcolor[rgb]{0,0.58,0}{\# Variable protégée}
+				
+        \hspace{1.5cm}self.\textcolor[rgb]{1,0,0}{\_\_}adr = "Brest" \textcolor[rgb]{0,0.58,0}{\# Variable privée,	}
+							
+				\hspace{5.5cm} \textcolor[rgb]{0,0.58,0}{\# =>: \_Personne\_\_adr}
+			%\small{
+			\textcolor[rgb]{0,0.58,0}{\# Exécution}
+			
+			p = Personne()
+			
+			print(p.nom) \pause \textcolor[rgb]{0,0.58,0}{\# -> 'inconnu' }
+      
+			print(p.\_prenom) \pause \textcolor[rgb]{0,0.58,0}{\# ->'xxx' : non recommandé}
+      
+			\pause print(p.\_\_adr) \pause \textcolor[rgb]{0,0.58,0}{\# -> Erreur}\pause
+      
+			print(p.\_Personne\_\_adr)\textcolor[rgb]{0,0.58,0}{ \# -> 'Brest'}%}
+     \end{semiverbatim}
+	\end{exemple}
+ 
+\end{frame}
 
 \begin{frame}
   \frametitle{Accesseurs}
   \only<1-5>{
     \textcolor{red}{Encapsulation}
     \begin{itemize}[<+->]
-    \item Variables privées : comment y accéder ?
-    \item[$\Rightarrow$] utilisation de méthodes get et set
+    \item Protéger l'accès aux variables d'instance : comment y accéder ?
+    		\begin{enumerate}
+			      \item \color<3-5>{red}{Utilisation de méthodes \texttt{get} et \texttt{set}}
+			      \item Utilisation de décorateurs
+		     \end{enumerate}
     \end{itemize}
-    \uncover<3->{
-      \begin{exemple}
-        \textcolor{red}{private} int numerateur;
+    
+		\uncover<3->{
+      \begin{exemple}[\texttt{get()} et \texttt{set()}]
+			class Rationnel(object):
+			
+			 \hspace{1cm}def \textcolor<1>{red}{\twound{init}\twound}(\textcolor{blue}{self}, num, den =1) :
+	     
+			\hspace{2cm}\textcolor<1>{red}{self.}\textcolor<2>{red}{\_\_}\textcolor<3>{red}{num} = num				
         
-        \uncover<4->{\textcolor{red}{public} int getNumerateur() \{
+        
+        \uncover<4->{\hspace{1cm}\textcolor{red}{def} get\_numerateur(\textcolor{red}{self}) :
 
-          \hspace{1cm}return numerateur;
+          \hspace{2cm}return self.\_\_num
+          }
 
-          \}}
+        \uncover<5->{\hspace{1cm}\textcolor{red}{def} set\_numerateur(\textcolor{red}{self}, num): 
 
-
-        \uncover<5->{\textcolor{red}{public} void setNumerateur(int num) \{
-
-          \hspace{1cm}numerateur = num;
-
-          \}}
+          \hspace{2cm}self.\_\_num = num}
       \end{exemple}}}
   \only<6>{
     \begin{center}
@@ -394,12 +489,14 @@
         
         \node (figure) [classe, node distance=4mm,below=of classe]
         {
-          \texttt{num=2\\den=3}
-          \nodepart{second}\texttt{getNum()\\setNum()}
+          \texttt{\_\_num=2\\\_\_den=3}
+          \nodepart{second}\texttt{get\_num()\\set\_num()}
         };
         \node (obj1) [below=of figure, xshift=-1cm] {x};
         \draw[uses] (obj1) to (figure.south);
-        \node (main) [node distance=1mm,below=of obj1,xshift=1cm] {\texttt{main()}};
+        \node (main) [node distance=1mm,below=of obj1,xshift=1cm] {\texttt{x = Rationnel(2,3)}};
+				\node (main) [node distance=1mm,below=of obj1,yshift=-0.5cm,xshift=0.5cm] {\texttt{x.set\_num(10)}};
+				\node (main) [node distance=1mm,below=of obj1,yshift=-0.5cm,xshift=0.5cm] {\texttt{x.set\_num(10)}};
         \draw[uses] (figure.second east)+(-0.25,-0.3) .. controls +(1.5,0.3) and +(1.5,0.3) .. ([xshift=-0.5cm,yshift=-3mm] figure.north east);
         \draw[uses] (figure.second east)+(-0.25,0.25) .. controls +(1,0.3) and +(1,0.3) .. ([xshift=-0.5cm,yshift=-3mm] figure.north east);
 
@@ -417,21 +514,85 @@
 \end{frame}
 
 \begin{frame}
+  \frametitle{Décorateur}
+  
+    \textcolor{red}{Encapsulation}
+    \begin{itemize}
+      \item Protéger l'accès aux variables d'instance : comment y accéder ?
+      \begin{enumerate}
+		    \item utilisation de méthodes \texttt{get} et \texttt{set}
+			  \item \color<1->{red}{utilisation de décorateurs : remplacent get() et set()} :
+		  \end{enumerate}		
+		  \begin{itemize}
+			  \item remplace le getteur d'un attribut par une méthode devant laquelle figure \textcolor{red}{\texttt{$@$proprety}}
+	\item remplace le setteur d'un attribut par une méthode devant laquelle figure \textcolor{red}{\texttt{$@$nomAttribut.setter}}
+				\end{itemize}
+		     
+    \end{itemize}
+   
+		
+\end{frame}
+
+\begin{frame}
+
+  \frametitle{Décorateur}
+
+      \begin{exemple}
+			\begin{semiverbatim}
+			\vspace{-0.5cm}
+			class Rationnel(object):
+			
+			 \hspace{1cm}def \textcolor{red}{\twound{init}\twound}(\textcolor{blue}{self}, num, den =1):
+	     
+			\hspace{2cm}\textcolor{red}{self.}\textcolor<2>{red}{\_\_}\textcolor{red}{num} = num				
+        
+        \hspace{1cm}\textcolor[rgb]{0.5,0.5,0.5}{@property}
+				
+        \hspace{1cm}\textcolor{red}{def} num(\textcolor{red}{self}):
+
+          \hspace{2cm}return self.\_\_num
+          
+        \hspace{1cm}\textcolor[rgb]{0.5,0.5,0.5}{@num.setter}
+				
+        \hspace{1cm}\textcolor{red}{def} num(\textcolor{red}{self}, num): 
+
+          \hspace{2cm}self.\_\_num = num
+					\pause
+					\small{
+					
+					\# Exécution ------------------------
+					
+					r = Rationnel(2,5) \textcolor[rgb]{0,0.58,0}{\# création de l'objet r =2/5}\pause
+					
+					print(r.num) \pause \textcolor[rgb]{0,0.58,0}{\# => acces à num de l'objet r : affiche 2}
+					
+					r.num = 10   \pause \textcolor[rgb]{0,0.58,0}{\# => appel au setter : num vaut 10}
+					
+					print(r.num)  \pause \textcolor[rgb]{0,0.58,0}{\# => acces à num de l'objet r : affiche 10}}
+
+					
+\end{semiverbatim}
+
+
+\end{exemple}
+\end{frame}
+
+\begin{frame}
   \frametitle{Constructeur}
   \begin{itemize}
-  \item Rôle : initialiser l'objet (\textcolor{blue}{variables d'instance})
-  \item Appelé par l'opérateur \textcolor{red}{new}
-  \item Méthode sans type de retour portant le nom de la classe
+  \item Rôle : créer et initialiser l'objet (\textcolor{blue}{variables d'instance})
+  \item Appelé par l'\textcolor{red}{appel de la classe} : \texttt{obj = Rationnnel(1,5)}
+  \item Méthode \texttt{\_\_init\_\_(self, ...)} dont le premier paramètre est \emph{self} 
   \end{itemize}
 
   \begin{exemple}[Constructeur]
-    public Rationnel(int num, int den) \{
+    def \_\_init\_\_(self, num, den):
 
-    \hspace{1cm}\textcolor{blue}{numerateur} = num;
+    \hspace{1cm}\textcolor{blue}{self.\_\_num} = num
 
-    \hspace{1cm}\textcolor{blue}{denominateur} = den;
+    \hspace{1cm}\textcolor{blue}{self.\_\_den} = den
 
-    \}
+    
   \end{exemple}
 \end{frame}
 
@@ -444,13 +605,13 @@
 
   \begin{exemple}
     \begin{semiverbatim}
-      Rationnel x1 = new Rationnel(1,2);
+      x1 =  Rationnel(1,2)
 
-      Rationnel x2 = new Rationnel(2,3);
+      x2 = Rationnel(2,3)
 
-      System.out.println(x1.getNumerateur());
+      print(x1.get\_numerateur())
 
-      System.out.println(x2.getNumerateur());
+      print(x2.get\_numerateur())
 
       $\Rightarrow$ 1 2
     \end{semiverbatim}
@@ -458,28 +619,37 @@
 \end{frame}
 
 \begin{frame}
-  \frametitle{L'objet \emph{this}}
-  \only<1,2>{
+  \frametitle{L'objet \emph{self}}
+  \only<1-3>{
     \begin{itemize}
-    \item \emph{this} : objet représentant le contexte courant
+    \item \emph{self} : objet représentant le contexte courant
     \item utilisable uniquement dans une méthode d'instance
-    \item est implicite dans la plupart des cas
+		\item Utilisable quand on fait appel à une méthode d'instance depuis la classe
     \end{itemize}
     \pause
-    \begin{exemple}[Utilisation de \emph{this}]
+    \begin{exemple}[Utilisation de \emph{self}]
       \begin{semiverbatim}
-        \textcolor{red}{private int numerateur;}
-        
-        public int getNumerateur() \{
+			\vspace{-0.5cm}
+       class Rationnel(object):
+			
+			\hspace{1cm}def \_\_init\_\_(self, n, d):
       
-        \hspace{1cm}int numerateur = 0;
+			\hspace{2cm}\textcolor[rgb]{1,0,0}{den = n + d}
+			
+      \only<2>{\hspace{2cm}\textcolor{blue}{self.\_\_num} = n}\only<3>{\hspace{2cm}\textcolor{red}{self.set\_num(n)}}
 
-        \hspace{1cm}return \textcolor{red}{this.}numerateur;
+      \hspace{2cm}\textcolor{blue}{self.\_\_den} = d
+        
+				\pause
+				\hspace{1cm}def get\_num(self):
+      
+        \hspace{2cm}num = 0
 
-        \}
+        \hspace{2cm}return \textcolor{red}{self.}\_\_num
+
       \end{semiverbatim}
     \end{exemple}}
-  \only<3>{
+  \only<4>{
   \begin{center}
     \tikzstyle{classe}=[rectangle, draw=black, rounded corners,
     fill=blue!20, drop shadow, text centered, text=black, text width=2cm,
@@ -492,13 +662,13 @@
       \node (classe) {\textbf{Classe Rationnel}};
       \node (figure) [classe, node distance=4mm,below=of classe]
       {
-        \texttt{\textcolor{red}{num=2}\\den=3}
-        \nodepart{second}\texttt{\textcolor{red}{getNum()}\\setNum()}
+        \texttt{\textcolor{red}{\_\_num=2}\\\_\_den=3}
+        \nodepart{second}\texttt{\textcolor{red}{get\_num()}\\set\_num()}
       };
     
       \node (obj1) [below=of figure, xshift=-1cm] {x};
       \draw[uses] (obj1) to (figure.south);
-      \node (main) [node distance=1mm,below=of obj1,xshift=1cm] {\texttt{main()}};  
+      \node (main) [node distance=1mm,below=of obj1,xshift=1cm] {\texttt{x = Rationnel(2,3)}};  
       \draw[uses,color=red] (figure.second east)+(-0.4,0.18) .. controls +(1.1,0.3) and +(1.1,0.3) .. ([xshift=-7mm,yshift=-2.7mm] figure.north east);
       \begin{pgfonlayer}{background}
         % Compute a few helper coordinates
@@ -512,124 +682,124 @@
   }
 \end{frame}
 
-\begin{frame}
-  \frametitle{Exemple d'exécution}
-  \only<1,3,5,7,9,11,13,15,17>{
-    \begin{semiverbatim}
-      public class Rationnel \{
-
-      \hspace{1cm}private int {\color<15>{blue}num}; 
-
-      \hspace{1cm}private int {\color<17>{blue}den};
-
-      \hspace{1cm}public int {\color<11>{blue}getNum}() \{ {\color<13>{red}return this.num;} \}
-
-      \hspace{1cm}public void {\color<9>{blue}mult}(Rationnel x) \{
-
-      \hspace{2cm}{\color<15>{red}num} *= {\color<11>{red}x.getNum()};
-
-      \hspace{2cm}{\color<17>{red}den} *= x.getDen();
-
-      \hspace{1cm}\}
-
-      \hspace{1cm}public static void {\color<1>{red}main}(String args[]) \{
-
-      \hspace{2cm}{\color<3>{red}Rationnel x} {\color<5>{red}= new Rationnel(1,2);}
-
-      \hspace{2cm}{\color<7>{red}Rationnel y = new Rationnel(3,5);}
-
-      \hspace{2cm}{\color<9>{red}x.mult(y);}
-
-      \hspace{1cm}\}
-
-      \}
-    \end{semiverbatim}}
-  \only<2,4,6,8,10,12,14,16,18> {
-    \begin{center}
-      \tikzstyle{classe}=[rectangle, draw=black, rounded corners,
-      fill=blue!20, drop shadow, text centered, text=black, text width=2cm,
-      rectangle split, rectangle split parts=2]
-      \tikzstyle{uses}=[thick, arrows={-angle 60}, shorten >= 2pt]
-      \pgfdeclarelayer{background}
-      \pgfdeclarelayer{foreground}
-      \pgfsetlayers{background,main,foreground}
-      \begin{tikzpicture}[node distance=1cm, font=\small]
-        \node (classe) {\textbf{Classe Rationnel}};
-        \uncover<6->{
-          \node (figure) [classe, node distance=4mm,below=of classe]
-          {
-            \texttt{\textcolor<16>{red}{num=\only<-14>{1}\only<16->{3}}\\
-              \textcolor<18>{red}{den=\only<-16>{2}\only<18>{10}}}
-            \nodepart{second}\texttt{getNum()\\setNum()\\\textcolor<10>{red}{\textcolor<12->{blue}{mult()}}}
-          };
-        }
-        \uncover<4->{ \node (obj1) [below=of figure, xshift=-1cm] {\textcolor<10>{red}{x}};}
-        \uncover<6->{ \draw[uses] (obj1) to (figure.south);}
-        \node (main) [node distance=1mm,below=of obj1,xshift=1cm] {\texttt{main()}};
-        \uncover<8->{
-          \node (figure2) [classe, right=of figure]
-          {
-            \texttt{\textcolor<14>{red}{num=3}\\den=5}
-            \nodepart{second}\texttt{\textcolor<12>{red}{\textcolor<14>{blue}{getNum()}}\\setNum()\\mult()}
-          };
-          \node (obj2) [below=of figure2, xshift=-1cm] {y};
-          \draw[uses] (obj2) to (figure2.south);
-        }
-
-        \only<10>{ 
-          \draw[uses,color=red] (obj1) to (figure.south);
-          \draw[uses,dashed, color=purple] ([xshift=-5mm,yshift=-4mm] figure.second east) to (obj2);
-        }
-        \only<12,14>{
-          \draw[uses,color=blue] ([xshift=-5mm,yshift=-4mm] figure.second east) to ([xshift=4mm,yshift=4mm] figure2.second west);
-        }
-        \only<14>{
-          \draw[uses,color=red] (figure2.second east)+(-4mm,3.5mm) .. controls +(1.2,0.25) and +(1.2,0.25) .. ([xshift=-7mm,yshift=-2.7mm] figure2.north east);
-        }
-        \only<16>{
-          \draw[uses,color=red] (figure.second east)+(-5.5mm,-4mm) .. controls +(1.2,0.2) and +(1.2,0.2) .. ([xshift=-7mm,yshift=-2.7mm] figure.north east);
-        }
-        \only<18>{
-          \draw[uses,color=red] (figure.second east)+(-5.5mm,-4mm) .. controls +(1.2,0.15) and +(1.2,0.15) .. ([xshift=-5.5mm,yshift=-7mm] figure.north east);
-        }
-        \begin{pgfonlayer}{background}
-          % Compute a few helper coordinates
-          \path (obj1.west |- classe.north)+(-0.5,0.3) node (a) {};
-          \path (main.south -| figure2.east)+(+0.8,-0.2) node (b) {};
-          \path[fill=yellow!20,rounded corners, draw=black!50, dashed] (a) rectangle (b);
-        \end{pgfonlayer}
-        
-      \end{tikzpicture}
-    \end{center}
-  }
-  % \only<2>{
-  %   \includegraphics[height=7cm]{ex_rat1}
-  % }
-  % \only<4>{
-  %   \includegraphics[height=7cm]{ex_rat2}
-  % }
-  % \only<6>{
-  %   \includegraphics[height=7cm]{ex_rat3}
-  % }
-  % \only<8>{
-  %   \includegraphics[height=7cm]{ex_rat4}
-  % }
-  % \only<10>{
-  %   \includegraphics[height=7cm]{ex_rat5}
-  % }
-  % \only<12>{
-  %   \includegraphics[height=7cm]{ex_rat6}
-  % }
-  % \only<14>{
-  %   \includegraphics[height=7cm]{ex_rat7}
-  % }
-  % \only<16>{
-  %   \includegraphics[height=7cm]{ex_rat8}
-  % }
-  % \only<18>{
-  %   \includegraphics[height=7cm]{ex_rat9}
-  % }
-\end{frame}
+%\begin{frame}
+  %\frametitle{Exemple d'exécution}
+  %\only<1,3,5,7,9,11,13,15,17>{
+    %\begin{semiverbatim}
+      %public class Rationnel \{
+%
+      %\hspace{1cm}private int {\color<15>{blue}num}; 
+%
+      %\hspace{1cm}private int {\color<17>{blue}den};
+%
+      %\hspace{1cm}public int {\color<11>{blue}getNum}() \{ {\color<13>{red}return this.num;} \}
+%
+      %\hspace{1cm}public void {\color<9>{blue}mult}(Rationnel x) \{
+%
+      %\hspace{2cm}{\color<15>{red}num} *= {\color<11>{red}x.getNum()};
+%
+      %\hspace{2cm}{\color<17>{red}den} *= x.getDen();
+%
+      %\hspace{1cm}\}
+%
+      %\hspace{1cm}public static void {\color<1>{red}main}(String args[]) \{
+%
+      %\hspace{2cm}{\color<3>{red}Rationnel x} {\color<5>{red}= new Rationnel(1,2);}
+%
+      %\hspace{2cm}{\color<7>{red}Rationnel y = new Rationnel(3,5);}
+%
+      %\hspace{2cm}{\color<9>{red}x.mult(y);}
+%
+      %\hspace{1cm}\}
+%
+      %\}
+    %\end{semiverbatim}}
+  %\only<2,4,6,8,10,12,14,16,18> {
+    %\begin{center}
+      %\tikzstyle{classe}=[rectangle, draw=black, rounded corners,
+      %fill=blue!20, drop shadow, text centered, text=black, text width=2cm,
+      %rectangle split, rectangle split parts=2]
+      %\tikzstyle{uses}=[thick, arrows={-angle 60}, shorten >= 2pt]
+      %\pgfdeclarelayer{background}
+      %\pgfdeclarelayer{foreground}
+      %\pgfsetlayers{background,main,foreground}
+      %\begin{tikzpicture}[node distance=1cm, font=\small]
+        %\node (classe) {\textbf{Classe Rationnel}};
+        %\uncover<6->{
+          %\node (figure) [classe, node distance=4mm,below=of classe]
+          %{
+            %\texttt{\textcolor<16>{red}{num=\only<-14>{1}\only<16->{3}}\\
+              %\textcolor<18>{red}{den=\only<-16>{2}\only<18>{10}}}
+            %\nodepart{second}\texttt{getNum()\\setNum()\\\textcolor<10>{red}{\textcolor<12->{blue}{mult()}}}
+          %};
+        %}
+        %\uncover<4->{ \node (obj1) [below=of figure, xshift=-1cm] {\textcolor<10>{red}{x}};}
+        %\uncover<6->{ \draw[uses] (obj1) to (figure.south);}
+        %\node (main) [node distance=1mm,below=of obj1,xshift=1cm] {\texttt{main()}};
+        %\uncover<8->{
+          %\node (figure2) [classe, right=of figure]
+          %{
+            %\texttt{\textcolor<14>{red}{num=3}\\den=5}
+            %\nodepart{second}\texttt{\textcolor<12>{red}{\textcolor<14>{blue}{getNum()}}\\setNum()\\mult()}
+          %};
+          %\node (obj2) [below=of figure2, xshift=-1cm] {y};
+          %\draw[uses] (obj2) to (figure2.south);
+        %}
+%
+        %\only<10>{ 
+          %\draw[uses,color=red] (obj1) to (figure.south);
+          %\draw[uses,dashed, color=purple] ([xshift=-5mm,yshift=-4mm] figure.second east) to (obj2);
+        %}
+        %\only<12,14>{
+          %\draw[uses,color=blue] ([xshift=-5mm,yshift=-4mm] figure.second east) to ([xshift=4mm,yshift=4mm] figure2.second west);
+        %}
+        %\only<14>{
+          %\draw[uses,color=red] (figure2.second east)+(-4mm,3.5mm) .. controls +(1.2,0.25) and +(1.2,0.25) .. ([xshift=-7mm,yshift=-2.7mm] figure2.north east);
+        %}
+        %\only<16>{
+          %\draw[uses,color=red] (figure.second east)+(-5.5mm,-4mm) .. controls +(1.2,0.2) and +(1.2,0.2) .. ([xshift=-7mm,yshift=-2.7mm] figure.north east);
+        %}
+        %\only<18>{
+          %\draw[uses,color=red] (figure.second east)+(-5.5mm,-4mm) .. controls +(1.2,0.15) and +(1.2,0.15) .. ([xshift=-5.5mm,yshift=-7mm] figure.north east);
+        %}
+        %\begin{pgfonlayer}{background}
+          %% Compute a few helper coordinates
+          %\path (obj1.west |- classe.north)+(-0.5,0.3) node (a) {};
+          %\path (main.south -| figure2.east)+(+0.8,-0.2) node (b) {};
+          %\path[fill=yellow!20,rounded corners, draw=black!50, dashed] (a) rectangle (b);
+        %\end{pgfonlayer}
+        %
+      %\end{tikzpicture}
+    %\end{center}
+  %}
+  %% \only<2>{
+  %%   \includegraphics[height=7cm]{ex_rat1}
+  %% }
+  %% \only<4>{
+  %%   \includegraphics[height=7cm]{ex_rat2}
+  %% }
+  %% \only<6>{
+  %%   \includegraphics[height=7cm]{ex_rat3}
+  %% }
+  %% \only<8>{
+  %%   \includegraphics[height=7cm]{ex_rat4}
+  %% }
+  %% \only<10>{
+  %%   \includegraphics[height=7cm]{ex_rat5}
+  %% }
+  %% \only<12>{
+  %%   \includegraphics[height=7cm]{ex_rat6}
+  %% }
+  %% \only<14>{
+  %%   \includegraphics[height=7cm]{ex_rat7}
+  %% }
+  %% \only<16>{
+  %%   \includegraphics[height=7cm]{ex_rat8}
+  %% }
+  %% \only<18>{
+  %%   \includegraphics[height=7cm]{ex_rat9}
+  %% }
+%\end{frame}
 
 \section{Retour sur la notion de TAD}
 
@@ -670,87 +840,75 @@
 
 \begin{frame}
   \frametitle{Représentation de la pile}
-  Exemple : pile d'entiers
+  Exemple : pile \only<1-2>{d'entiers}\only<3>{d'éléments}
   \begin{itemize}
-  \item Choix d'une représentation interne : tableau d'entiers + position du sommet de la pile
-  \item Création d'une pile : allouer le tableau
-  \item Empiler, dépiler, extraire le sommet : accéder au tableau
-  \item Pile vide ou pleine : tester la taille du tableau
+  \item Choix d'une représentation interne : 
+	\begin{itemize}
+		\item \textcolor<2>{red}{tableau d'entiers + position du sommet de la pile}
+		\item \textcolor<3>{red}{une liste + capacité autorisée de la pile : possibilité de mettre tout type d'objet} 
+		\item etc
+	\end{itemize}
+	\pause
+  \item \textcolor<2>{red}{Création d'une pile} \only<2>{: \textcolor{red}{allouer le tableau}\\} 
+	       \only<2>{$\Longrightarrow$ voir le polycopié du cours} \only<3>{: \textcolor{red}{définir une liste + capacité}}
+  \item Empiler, dépiler, extraire le sommet : accéder au tableau/liste
+  \item Pile vide ou pleine : tester la taille du tableau/capacité de la liste
   \end{itemize}
 \end{frame}
 
 \begin{frame}
-  \frametitle{Pile en Java}
+  \frametitle{Pile en Python}
   \begin{exemple}[Pile]
+	\small
     \begin{semiverbatim}
-public class Pile \{
+class Pile(object): 
 
-\only<1>{  \hspace{1cm}private int contenu[];
+\only<2>{  \hspace{1cm}def \_\_init\_\_(self, max):
 
-  \hspace{1cm}private int sommet;}
-\only<2>{  \hspace{1cm}public Pile(int taille)  \{
+    \hspace{2cm}self.\_\_contenu = []
 
-    \hspace{2cm}contenu = new int[taille];
+    \hspace{2cm}self.\_\_maxpile = max 
+}
 
-    \hspace{2cm}sommet = -1; // pile vide
+\only<3>{  \hspace{1cm}def estvide(self): 
 
-  \hspace{1cm}\}}
-\only<3>{  \hspace{1cm}public boolean estVide()  \{
+    \hspace{2cm}return len(self.\_\_contenu)==0
 
-    \hspace{2cm}return sommet==-1;
+ \hspace{1cm}def estpleine(self):  
 
-  \hspace{1cm}\}
+    \hspace{2cm}return len(self.\_\_contenu) == \
+		self.\_\_maxpile
 
- \hspace{1cm} public boolean estPleine()  \{
+  }
+\only<4>{ \hspace{1cm}def empiler(self, val):
 
-    \hspace{2cm}return sommet==contenu.length-1;
+    \hspace{2cm}if not self.estpleine(): 
 
-  \hspace{1cm}\}}
-\only<4>{  \hspace{1cm}public void empiler(int val) \{
+        \hspace{3cm}self.\_\_contenu.append(val)
+				
+    \hspace{2cm}else: 
+		   
+			 \hspace{3cm}raise ValueError("err : pile pleine")
+  }
+\only<5>{  \hspace{1cm}def depiler(self): 
 
-    \hspace{2cm}if (!estPleine()) \{
+    \hspace{2cm}if not self.estvide():  
 
-        \hspace{3cm}sommet++; 
+        \hspace{3cm}return self.\_\_contenu.pop()
 
-        \hspace{3cm}contenu[sommet] = val; 
+    \hspace{2cm}else:
 
-      \hspace{2cm}\}
+      \hspace{3cm}return None 
+    }
+\only<6>{  \hspace{1cm}def lire\_sommet(self): 
 
-  \hspace{1cm}\}}
-\only<5>{  \hspace{1cm}public int depiler()  \{
+    \hspace{2cm}if not self.estvide():
 
-    \hspace{2cm}int val;
+      \hspace{3cm}return self.\_\_contenu[-1]
 
-    \hspace{2cm}if (!estVide())  \{
-
-        \hspace{3cm}val = contenu[sommet]; 
-
-        \hspace{3cm}sommet--; 
-
-      \hspace{2cm}\}
-
-    \hspace{2cm}else
-
-      \hspace{3cm}val = -1; 
-
-    \hspace{2cm}return val;
-
-  \hspace{1cm}\}}
-\only<6>{  \hspace{1cm}public int getSommet()  \{
-
-    \hspace{2cm}int val;
-
-    \hspace{2cm}if (!estVide())
-
-      \hspace{3cm}return contenu[sommet];
-
-    \hspace{2cm}else
-
-      \hspace{3cm}return -1; 
-
-  \hspace{1cm}\}}
-
-\}      
+    \hspace{2cm}return None 
+}
+     
     \end{semiverbatim}
   \end{exemple}
 \end{frame}
@@ -803,7 +961,7 @@ public class Pile \{
   \frametitle{Représentation de la file}
   Exemple : file d'entiers
   \begin{itemize}
-  \item Représentation interne : liste chaînée, vecteur, tableau + 2 indices
+  \item Représentation interne : liste, tableau + 2 indices
   \item Création d'une file : initialiser la liste ou le vecteur, allouer le tableau
   \item Enfiler, défiler, extraire la tête : accéder au tableau
   \item File vide ou pleine : tester les indices d'entrée et de sortie
